--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,32 +1,14 @@
-version: "3.5"
+version: "3.9"
 
 services:
-
-  postgres:
-    container_name: postgres
-    image: postgres:13.2
+   db:
+    image: postgres:13.4
     restart: always
     environment:
-      - POSTGRES_USER=admin
-      - POSTGRES_PASSWORD=password
-      - POSTGRES_DB=skillslist
+      POSTGRES_USER: christelle
+      POSTGRES_PASSWORD: password
+      POSTGRES_DB: skillsdb
     ports:
       - "5432:5432"
     volumes:
-      - postgres_data:/data/db
-
-  pgadmin:
-    container_name: pgadmin4
-    image: dpage/pgadmin4
-    restart: always
-    environment:
-      PGADMIN_DEFAULT_EMAIL: admin@admin.com
-      PGADMIN_DEFAULT_PASSWORD: password
-    ports:
-      - "5050:80"
-    volumes:
-      - pgadmin_data:/data/pgadmin
-
-volumes:
-  postgres_data:
-  pgadmin_data:
+      - "./V1.init.sql:/docker-entrypoint-initdb.d/1.sql"
